--- a/app/src/main/res/layout/layout_viewmoreinfo_feature_attachment.xml
+++ b/app/src/main/res/layout/layout_viewmoreinfo_feature_attachment.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <ListView
-        android:id="@+id/lstView_alertdialog_info"
+        android:id="@+id/lstView_alertdialog_attachments"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
     </ListView>
 
