--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -94,7 +94,22 @@
             android:paddingRight="@dimen/padding_title_popup"
             android:src="@drawable/ic_info"
             android:visibility="gone" />
-
+        <ImageButton
+            android:id="@+id/imgBtn_takePics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:paddingRight="@dimen/padding_title_popup"
+            android:visibility="gone"
+            android:src="@drawable/ic_camera" />
+        <ImageButton
+            android:id="@+id/imgBtn_view_attachment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:paddingRight="@dimen/padding_title_popup"
+            android:visibility="gone"
+            android:src="@drawable/ic_colections" />
         <ImageButton
             android:id="@+id/imgBtn_delete"
             android:layout_width="wrap_content"
