ràng buộc field isEdits

--- a/app/src/main/res/layout/activity_thong_ke.xml
+++ b/app/src/main/res/layout/activity_thong_ke.xml
@@ -60,7 +60,7 @@
                     android:textStyle="italic" />
             </LinearLayout>
             <TextView
-                android:id="@+id/txtTongItem"
+                android:id="@+id/txtTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Tổng số lượng: 0"
