--- a/app/src/main/res/layout/layout_title_listview.xml
+++ b/app/src/main/res/layout/layout_title_listview.xml
@@ -12,7 +12,7 @@
         android:background="@color/colorPrimary">
 
         <TextView
-            android:id="@+id/txtTongItem"
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
