--- a/app/src/main/res/layout/layout_title_listview_button.xml
+++ b/app/src/main/res/layout/layout_title_listview_button.xml
@@ -13,11 +13,12 @@
 
         <TextView
             android:id="@+id/txtTitlePopup"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:textStyle="bold"
+            android:textStyle="bold|italic"
             android:text="Tiêu đề"
+            android:gravity="right"
             android:textColor="@color/colorBackground_1"
             android:textSize="20sp" />
     </LinearLayout>
