--- a/app/src/main/res/layout/item_tracuu.xml
+++ b/app/src/main/res/layout/item_tracuu.xml
@@ -3,42 +3,50 @@
     android:id="@+id/layout_tracuu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dimen_5dp"
     android:orientation="vertical"
-    >
+    android:padding="@dimen/dimen_5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/txt_thoigian"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/txt_thoigian"/>
+                android:layout_height="wrap_content" />
+
             <TextView
+                android:id="@+id/txt_diachi"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/txt_diachi"/>
+                android:layout_height="wrap_content" />
+
             <TextView
+                android:id="@+id/txt_sodienthoai"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/txt_sodienthoai"/>
+                android:layout_height="wrap_content" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
+
             <ImageView
                 android:id="@+id/img_Item1"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_gravity="end"
                 android:src="@drawable/ic_nearme" />
+
             <ImageView
                 android:id="@+id/img_Item2"
                 android:layout_width="wrap_content"
@@ -48,34 +56,34 @@
         </LinearLayout>
     </LinearLayout>
     <!--<FrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-        <!--<TextView-->
-            <!--android:id="@+id/txt_tracuu_id"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="id"-->
-            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-            <!--android:textStyle="bold" />-->
-        <!--<TextView-->
-            <!--android:id="@+id/txt_tracuu_ngaycapnhat"-->
-            <!--android:layout_gravity="end"-->
-            <!--android:text="12-03-2018"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--/>-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
+    <!--<TextView-->
+    <!--android:id="@+id/txt_tracuu_id"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="id"-->
+    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+    <!--android:textStyle="bold" />-->
+    <!--<TextView-->
+    <!--android:id="@+id/txt_tracuu_ngaycapnhat"-->
+    <!--android:layout_gravity="end"-->
+    <!--android:text="12-03-2018"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--/>-->
 
     <!--</FrameLayout>-->
 
     <!--<TextView-->
-        <!--android:id="@+id/txt_tracuu_diachi"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/txt_tracuu_id"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_weight="90"-->
-        <!--android:text="phường 10, quận 5, TP.HCM"-->
-        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
+    <!--android:id="@+id/txt_tracuu_diachi"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignBottom="@+id/txt_tracuu_id"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_weight="90"-->
+    <!--android:text="phường 10, quận 5, TP.HCM"-->
+    <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
 
 </LinearLayout>
