--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,9 @@
     <dimen name="margin_small">8dp</dimen>
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_layout">20dp</dimen>
+
+    <dimen name="width_image_popup">30dp</dimen>
+    <dimen name="height_image_popup">30dp</dimen>
+
+
 </resources>
