--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <style name="MyTextAppearance.Prime" parent="@android:style/TextAppearance">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="MyTextAppearance.Prime.Small" parent="MyTextAppearance.Prime">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="MyTextAppearance.Prime.Big" parent="MyTextAppearance.Prime">
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
