--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,15 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="MyTextAppearance.Black" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/black</item>
+
+    </style>
+
+    <style name="MyTextAppearance.Black.Small" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">15sp</item>
+    </style>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
