--- a/app/src/main/res/menu/activity_quan_ly_su_co_drawer.xml
+++ b/app/src/main/res/menu/activity_quan_ly_su_co_drawer.xml
@@ -30,6 +30,10 @@
                     android:icon="@drawable/ic_table"
                     android:title="@string/nav_thong_ke" />
                 <item
+                    android:id="@+id/nav_test"
+                    android:icon="@drawable/ic_table"
+                    android:title="@string/nav_thong_ke" />
+                <item
                     android:id="@+id/nav_tracuu"
                     android:icon="@drawable/ic_search"
                     android:visible="false"
