--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="spiner_border_color">#ccc</color>
     <color name="spiner_color">#333</color>
 
-    <color name="colorPrimary">#578fc8</color>
-    <color name="colorPrimaryDark">#4985c3</color>
+    <color name="colorPrimary">#06610F</color>
+    <color name="colorPrimaryDark">#04440B</color>
     <color name="colorAccent">#66CDAA</color>
     <color name="colorRed">#ff0000</color>
     <color name="colorWhite">#ffffff</color>
