--- a/app/src/main/res/menu/activity_quan_ly_su_co_drawer.xml
+++ b/app/src/main/res/menu/activity_quan_ly_su_co_drawer.xml
@@ -27,7 +27,7 @@
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/nav_thongke"
-                    android:icon="@drawable/ic_table"
+                    android:icon="@drawable/ic_menu"
                     android:title="@string/nav_thong_ke" />
 
                 <item
