--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="spiner_color">#333</color>
 
     <color name="colorPrimary">#06610F</color>
+    <color name="colorPrimaryLight">#058412</color>
     <color name="colorPrimaryDark">#04440B</color>
     <color name="colorAccent">#66CDAA</color>
     <color name="colorRed">#ff0000</color>
@@ -48,5 +49,5 @@
     <color name="colorImgBtnUpload_2">#67b2e4</color>
     <color name="colorBorderEditext_2">#ffffff</color>
     <color name="colorBackground_csm_2">#66CDAA</color>
-    <color name="colorPrimaryLight">#029dea</color>
+
 </resources>
