--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -57,7 +57,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/llayout_viewtablethoigian"
+                android:id="@+id/llayout_vattu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border_curve"
