Vật tư: kiểm tra chức năng cật nhật, load danh sách vật tư

--- a/app/src/main/res/layout/item_viewmoreinfo.xml
+++ b/app/src/main/res/layout/item_viewmoreinfo.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:paddingLeft="20dp"
-                android:text="maKhachHang"
+                android:text="cmnd"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
 
