--- a/app/src/main/res/layout/activity_congviec.xml
+++ b/app/src/main/res/layout/activity_congviec.xml
@@ -7,7 +7,7 @@
     tools:context=".CongViecActivity">
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/vattu_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
