--- a/app/src/main/res/layout/activity_vat_tu.xml
+++ b/app/src/main/res/layout/activity_vat_tu.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"></Spinner>
 
             <ListView
-                android:id="@+id/listview"
+                android:id="@+id/vattu_listview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"></ListView>
@@ -29,13 +29,14 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/txtAccept"
+            android:id="@+id/txtAdd"
             style="@style/MyTextAppearance.Prime.Big"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_small"
             android:layout_gravity="bottom|right"
             android:text="CẬP NHẬT"
+
             android:textStyle="bold" />
     </FrameLayout>
 </LinearLayout>
