--- a/app/src/main/res/layout/layout_title_listview.xml
+++ b/app/src/main/res/layout/layout_title_listview.xml
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ListView
-            android:id="@+id/listview"
+            android:id="@+id/vattu_listview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"></ListView>
