--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorPrimary">#06610F</color>
     <color name="colorPrimaryLight">#058412</color>
     <color name="colorPrimaryDark">#04440B</color>
-    <color name="colorAccent">#66CDAA</color>
+    <color name="colorAccent">@color/colorPrimary</color>
     <color name="colorRed">#ff0000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGray">#bbbbbb</color>
