--- a/app/src/main/res/layout/item_tracuu.xml
+++ b/app/src/main/res/layout/item_tracuu.xml
@@ -19,16 +19,19 @@
 
             <TextView
                 android:id="@+id/txt_thoigian"
+                style="@style/MyTextAppearance.Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/txt_diachi"
+                style="@style/MyTextAppearance.Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/txt_sodienthoai"
+                style="@style/MyTextAppearance.Black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
