--- a/app/src/main/res/layout/activity_vat_tu.xml
+++ b/app/src/main/res/layout/activity_vat_tu.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container_vat_tu"
     android:fillViewport="true"
     android:orientation="vertical">
 
