--- a/app/src/main/res/menu/quan_ly_su_co.xml
+++ b/app/src/main/res/menu/quan_ly_su_co.xml
@@ -7,5 +7,6 @@
 
         app:actionViewClass="android.support.v7.widget.SearchView"
 
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="always|collapseActionView"
+        android:title="" />
 </menu>
