Set title cho spinner trong Cập nhật thông tin

--- a/app/src/main/res/layout/item_add_feature.xml
+++ b/app/src/main/res/layout/item_add_feature.xml
@@ -47,7 +47,12 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:hintEnabled="true">
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_spin_title"
+            android:text="Domain"
+            style="@style/InputLabel" />
 
         <Spinner
             android:id="@+id/spinner_add_spinner_value"
