--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,6 @@
     <dimen name="margin_button_popup">8dp</dimen>
     <dimen name="margin_inner_button_popup">3dp</dimen>
 
+    <dimen name="input_label_vertical_spacing">8dp</dimen>
+    <dimen name="input_label_horizontal_spacing">4dp</dimen>
 </resources>
